--- a/test/5.in
+++ b/test/5.in
@@ -1,4 +1,2 @@
-MqphdM dwKV2r
-Jm8rMb q/yevG jtYBJC Ur1wF3 alKgrC
-cNXs0s
-gDz2uT tekMH5 2vx+uV
+o2pZ4U	LUU /UpSDG	ivy mVligO	b+0 gFaNZL	2I1 f4ZxCD	p+p G9vz48
+	2ss xC4v3Y	ok2 0N8xIS	oMV HlejUp	/Xe 2gl/ma	VZj Ed7W4H	XZs V9sGzb	1Cy r72zcv	86J 3dfwGs	BT3 tCKV2L 
